fixed alignment in footer

--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -127,6 +127,7 @@
   .footer-logo {
     display: flex;
     justify-content: center;
+    align-items: center;
   }
 
   .footer-info {
